docs: swagger methods and parameter for download
Improve the swagger documentation including
- Fix correct method for /api/v1/download as GET instead POST
- Include the parameter which allows users to try the endpoint directly
  from swagger documentation
